--- a/src/components/CourseGoals/CourseInput/CourseInput.css
+++ b/src/components/CourseGoals/CourseInput/CourseInput.css
@@ -22,3 +22,23 @@
   background: #fad0ec;
   border-color: #8b005d;
 }
+
+.form-control .warning {
+  display: none;
+}
+
+.form-control.invalid input {
+  border-color: red;
+  background-color: yellow;
+}
+
+.form-control.invalid label {
+  color: red;
+}
+
+.form-control.invalid .warning {
+  font-size: 0.8rem;
+  display: block;
+  margin: 5px 5px 20px 0;
+  color: red;
+}
